Changed redux prefix

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-	Theme Name: 	Kake - Corporate Full Theme
-	Theme URI: 		http://corpfull.kakesamples.com
-	Description: 	Theme for corporate sites!
-	Version: 		3.6.3
+	Theme Name: 	ProdHMD - Music Master
+	Theme URI: 		https://musicmaster.hmdsamples.com
+	Description: 	Theme for musician sites! Full theme!
+	Version: 		1.0
 	Author: 		James Burrell
 	Author URI: 	http://web.lljb3.com
-	Tags: 			prodhmd, kakemultimedia, corporate, starkers, clean, basic
+	Tags: 			prodhmd, kakemultimedia, music, starkers, clean, basic
 */
 
 /*
