--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ p {
 .totop {
     position: fixed;
 	bottom: 1.35em;
-    right: 15px;
+    left: 15px;
     text-decoration: none;
     background-color: rgba(235, 235, 235, 0.25);
 	font-size: 12px;
@@ -129,7 +129,7 @@ p {
 .totop.fadeIn:before {
     content: "To Top";
     position: fixed;
-    right: 60px;
+    left: 60px;
     background: #414141;
     padding: 1px 6px;
     color: #f8f8f8;
@@ -138,7 +138,7 @@ p {
 	transition: opacity .2s ease-in-out;
 }
 .totop.fadeIn:after {
-    left: -50%;
+    right: -50%;
     top: 40%;
     border: solid transparent;
     content: " ";
@@ -147,7 +147,7 @@ p {
     position: absolute;
     pointer-events: none;
     border-color: rgba(136, 183, 213, 0);
-    border-left-color: #414141;
+    border-right-color: #414141;
     border-width: 5px;
     margin-top: 0px;
 	opacity: 0;
@@ -239,8 +239,12 @@ p {
 
 /* Menu Info */
 #header-container {
-	font-size: 75%;
+	font-size: 100%;
 	z-index: 8000;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
 #header-container #header-menu {
 	padding-top: 0px;
@@ -266,7 +270,7 @@ p {
 	margin-bottom: 10px;
 }
 #header-container #site-links {
-	font-size: 85%;
+	font-size: 100%;
 	margin-bottom: 15px;
 }
 #header-container #site-credits table {
@@ -475,7 +479,7 @@ p {
 	width: 100%;
 	position: fixed;
 	top: 0;
-	left: 15px;
+	left: 0;
 }
 .menu-padding {
 	padding-top: 25px;
@@ -702,26 +706,26 @@ p {
 	}
 }
 /* Home Info */
-#home {
+#home.jumbotron {
 	width: 100%;
 	height: 100%;
 	padding: 0px !important;
 }
 /* Other Info */
-#other {
+#other.jumbotron {
 	width: 100%;
 	height: auto;
 	min-height: 360px;
 	padding: 0;
 }
-#other .container-fluid {
+#other.jumbotron .container-fluid {
 	z-index: 3;
 }
-#other .image-container {
+#other.jumbotron .image-container {
 	width: 100%;
 	height: auto;
 }
-#other .image-container img {
+#other.jumbotron .image-container img {
 	display: block;
 	top: 0;
 	left: 0;
@@ -733,10 +737,23 @@ p {
 
 
 /* Content Info */
-#content {
+main {
+    width: 100%;
+    height: 100%;
+    padding: 75px 0;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+#content,#section-container section {
 	display: block;
 	padding: 0 15px;
 	z-index: 10;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow-y: auto;
 }
 #content .widget ul {
     list-style-type: none;
@@ -968,10 +985,14 @@ p {
 
 /* Footer Info */
 #footer-container {
-	padding: 1em 0;
+	padding: 21.5px 0;
 	letter-spacing: normal;
-	z-index: 3;
-	font-size: 85%;
+	z-index: 8000;
+	font-size: 100%;
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+	left: 0;
 }
 #footer-container a {
 	transition: color .5s ease-in-out;
@@ -1000,25 +1021,11 @@ p {
 		width: 100%;
 	}
 }
-/* Sitemap Info */
-#footer-sitemap {
-	padding: 25px 30px;
-	z-index: 3;
-	font-size: 85%;
+/* Player Info */
+#playerSongInfo {
+    margin-right: 15px;
 }
-#footer-sitemap a {
-	transition: color .5s ease-in-out;
-}
-#footer-sitemap a:hover {
-	transition: color .5s ease-in-out;
-}
-#footer-sitemap .heading {
-	font-weight: 700 !important;
-	text-transform: uppercase !important;
-}
-#footer-sitemap .split {
-	height: auto;
-}
-#footer-sitemap .split:last-child {
-	border-right: none;
+#playerControls li {
+	padding: 0;
+	cursor: pointer;
 }
