--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,13 @@
 .fa {
     font-family: 'FontAwesome' !important;
     font-weight: 400 !important;
-    font-size: 100%;
+    font-size: 150%;
     line-height: normal;
     text-align: center;
-    padding: 8px 0px;
-    width: 32px;
-    height: 32px;
-    border-radius: 24px;
+    padding: .5em 0px;
+    width: 2em;
+    height: 2em;
+    border-radius: 2em;
     color: #f8f8f8;
     display: inline-block;
     transition: .5s background ease-in-out;
@@ -61,8 +61,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 h1,h2,h3,h4,h5,h6 {
-	display: inline-block; 
-	width: 100%; 
+	display: inline-block;
+	width: 100%;
 }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
@@ -244,9 +244,6 @@ p {
 	top: 0;
 	left: 0;
 }
-#header-container #header-menu {
-	padding-top: 20%;
-}
 #header-container .navbar-brand {
 	margin: 0px;
     margin-top: 50px;
@@ -289,8 +286,8 @@ p {
 	border-radius: 15px;
 }
 #header-container #site-social a {
-	width: 30px;
-	height: 30px;
+	width: 48px;
+	height: 48px;
 	transition: all .2s;
 	display: inline-block !important;
 }
@@ -428,6 +425,18 @@ p {
 	left: 0;
 	padding: 25px 15px;
 	transition: .5s ease-in-out all;
+}
+.header-table {
+    display: table;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.header-table-cell {
+	display: table-cell;
+	vertical-align: middle;
 }
 #header-collapse.in #header-menu,
 #header-collapse.in #header-info,
@@ -886,7 +895,8 @@ p {
     outline: 0;
     font-size: 100%;
     vertical-align: baseline;
-    background: transparent;
+	background: transparent;
+	list-style: none;
 }
 #album-post {
     margin-bottom: 15px;
@@ -897,7 +907,52 @@ p {
     background: none !important;
     color: #f8f8f8;
     padding-left: 0;
+    margin-top: 12.5px;
+}
+#album-types {
+    float: left;
+    margin: 20px;
+}
+.archive-title {
+    width: auto;
+}
+.album-tracklist .glyphicon-play {
+    padding: 5px 5px;
+    border: 1px solid #f8f8f8;
+    border-radius: 15px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    font-size: 10px;
+}
+.album-title {
+	margin-top: 0;
+}
+.album-info {
     margin-bottom: 15px;
+}
+.album-links .fa {
+    width: auto;
+    height: auto;
+}
+.go-back {
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+/* Shows Info */
+#show-list {
+	margin: 0 -15px;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+	background: transparent;
+	list-style: none;
+}
+#show-list .post {
+    padding: 0 0 15px 0;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #fff;
 }
 /* Contact Info */
 .wpcf7 .wpcf7-text,.wpcf7 .wpcf7-textarea {
