--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,33 +174,27 @@ p {
 /* Preloader Info */
 #loader {
 	background: #f8f8f8;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
 	position: fixed;
 	top: 0;
-    left: 0;
+	left: 0;
+	display: table;
 }
 #loader .overlay {
 	width: 100%;
-    height: 100%;
+	height: 100%;
 	opacity: .85;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-	display: flex;
-	align-items: center;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
 }
 #loader .overlay .logo {
-	min-width: 100%;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    margin-bottom: 15px;
 }
 #loader .video {
 	width: 100%;
@@ -220,6 +214,23 @@ p {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.loading {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    z-index: 8000;
+}
+.loadbar {
+	width: 0%;
+    height: 2px;
+    background-color: #da3b30;
+	margin-right: 15px;
+	overflow: hidden;
+}
+.percentage {
+    float: left;
 }
 .loadin {
 	visibility: hidden;
@@ -286,8 +297,8 @@ p {
 	border-radius: 15px;
 }
 #header-container #site-social a {
-	width: 2.5em;
-	height: 2.5em;
+	width: 48px;
+	height: 48px;
 	transition: all .2s;
 	display: inline-block !important;
 }
@@ -930,16 +941,6 @@ p {
 .album-info {
     margin-bottom: 15px;
 }
-.album-links {
-    margin-top: 15px;
-}
-.album-links a {
-    width: 100%;
-    float: left;
-    text-align: center;
-    background-color: #000;
-    margin-bottom: 15px;
-}
 .album-links .fa {
     width: auto;
     height: auto;
@@ -1005,6 +1006,12 @@ p {
 }
 #posts-section .post-title {
 	margin-top: 0px;
+}
+#posts-section .thumbnail {
+    border: 1px solid #fff;
+    border-radius: 0;
+    background-color: transparent;
+    padding: 0 15px;
 }
 .navigation {
 	margin-bottom: 3em;
