--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,8 @@ body {
 	-moz-text-shadow: none;
 	-webkit-text-shadow: none;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+	-moz-osx-font-smoothing: grayscale;
+	overflow: hidden !important;
 }
 h1,h2,h3,h4,h5,h6 {
 	display: inline-block;
@@ -243,6 +244,9 @@ p {
 	#loader .overlay .logo {
 		display: none;
 	}
+}
+::-webkit-scrollbar {
+    display: none;
 }
 
 
@@ -782,7 +786,7 @@ p {
     width: 100%;
     height: 100%;
     padding: 75px 0;
-    overflow: hidden;
+    overflow: hidden !important;
     position: fixed;
     top: 0;
     left: 0;
