--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,6 +412,7 @@ p {
 	}
 	.navbar-nav li {
 		width: 100%;
+		margin-bottom: 5px;
 		text-align: center;
 	}
 	.navbar-nav h2 {
@@ -1055,6 +1056,18 @@ p {
 }
 .comment-form .submit {
 	border: none !important;
+}
+@media screen and (max-width:768px) {
+	#posts-sidebar .post {
+		margin-right: 0;
+		margin-left: 0;
+	}
+}
+/* Shop Info */
+.woocommerce .panel {
+	background-color: transparent;
+	border-radius: 0;
+	border: none;
 }
 
 
