Update to theme name, description

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-	Theme Name: 	ProdHMD - Music Master
+	Theme Name: 	Music Master
 	Theme URI: 		https://musicmaster.hmdsamples.com
-	Description: 	Theme for musician sites! Full theme!
+	Description: 	Kake Multimedia and ProdHMD's full theme for musicians.
 	Version: 		1.0
 	Author: 		James Burrell
 	Author URI: 	http://web.lljb3.com
